fix: overflow-y should  be different depending on when slide is horizontal or vertical

--- a/css/main.css
+++ b/css/main.css
@@ -302,15 +302,15 @@
      Slides
   ───────────────────────────────────────── */
   .legend {
-    @apply flex flex-col w-full gap-4 overflow-y-auto lg:w-66 lg:max-h-full xl:w-89.25;
+    @apply flex flex-col w-full gap-4 lg:overflow-y-auto lg:w-66 lg:max-h-full xl:w-89.25;
   }
 
   .presentation-slider {
-    @apply flex grow items-center overflow-x-auto snap-x snap-mandatory scroll-smooth gap-15 [-webkit-overflow-scrolling:touch];
+    @apply flex grow items-center overflow-x-auto snap-x snap-mandatory scroll-smooth gap-15 [-webkit-overflow-scrolling:touch] touch-pan-x;
   }
 
   .presentation-slide {
-    @apply min-w-full grow self-start gap-4 bg-neutral-four snap-center snap-always transition-all duration-300 ease-in-out outline-none lg:grow-0 lg:self-center lg:flex-row lg:min-w-175 lg:h-92 xl:gap-8 xl:min-w-234 xl:h-128.75 first-of-type:lg:ml-[calc((100vw-700px)/2)] first-of-type:xl:ml-[calc((100vw-936px)/2)] last-of-type:lg:mr-[calc((100vw-700px)/2)] last-of-type:xl:mr-[calc((100vw-936px)/2)];
+    @apply min-w-full h-full self-start gap-4 bg-neutral-four snap-center snap-always transition-all duration-300 ease-in-out outline-none overflow-y-auto touch-pan-y lg:overflow-y-hidden lg:touch-auto lg:grow-0 lg:self-center lg:flex-row lg:min-w-175 lg:h-92 xl:gap-8 xl:min-w-234 xl:h-128.75 first-of-type:lg:ml-[calc((100vw-700px)/2)] first-of-type:xl:ml-[calc((100vw-936px)/2)] last-of-type:lg:mr-[calc((100vw-700px)/2)] last-of-type:xl:mr-[calc((100vw-936px)/2)];
   }
 
   dialog:not(#analysis-four) .presentation-slider .presentation-slide:not(:last-child) div:first-of-type svg {
